# ICP-CPP-Contact_Based_Registration

./: CMakeLists.txt  README.md
data/data1/: ptcloud1.csv  transform_mat.csv
data/data2/: ptcloud1.csv  transform_mat.csv
data/data3/: ptcloud1.csv  transform_mat.csv
data/data4/: ptcloud1.csv  transform_mat.csv
data/data5/: ptcloud1.csv  transform_mat.csv
include/: opt_icp.hpp
src/: main_file.cpp  opt_icp.cpp
src/old/: knn_ex2.cpp
